--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,9 +16,11 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <div class="main-content">
+    <div class="content-section">
         <h1>Contact</h1>
-        <p>Contact information or a contact form.</p>
+        <p><strong>Email</strong>: <a href="mailto:baberwalharsh@outlook.com">baberwalharsh@outlook.com</a></p>
+        <p><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/baberwalharsh">linkedin.com/in/baberwalharsh</a></p>
+        <p><strong>Phone</strong>: (240) 705-1780</p>
     </div>
 </body>
 </html>
