--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,9 +16,15 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <div class="main-content">
+    <div class="content-section">
         <h1>Projects</h1>
-        <p>Details about your projects.</p>
+        <ul>
+            <li><strong>Classification Model Pipeline</strong>: Developed with ~76% accuracy for predicting streaming activity.</li>
+            <li><strong>Market Mix Models</strong>: Optimized marketing budgets, saving ~$25M.</li>
+            <li><strong>Customer Segmentation</strong>: Created a k-means model for a Dutch e-commerce company.</li>
+            <li><strong>Data Pipeline for Telecom</strong>: Identified multi-carrier subscribers, increasing revenue by ~26%.</li>
+            <li><strong>Simulation Tool for Pricing Strategy</strong>: Improved pricing strategy for a US-based perfume company.</li>
+        </ul>
     </div>
 </body>
 </html>
