--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <!-- image fluid to fit the image in the container, w-50 to reduce the size to 50% of actual -->
           <!-- d-none remove the image display and d-sm-block will display the image only above the small breakpoint -->
           <!-- image color:#AD01AD; complementary color:#01AD01 -->
-          <img class = "image-fluid w-50 d-none d-md-block", src="images/coder.svg" alt="GabarAvatar">
+          <img class = "image-fluid w-50 d-none d-md-block" src="images/home.svg" alt="GabarAvatar">
 
           <div class = "p-1 p-lg-5">
             <!-- Use span with text-color to change the color of any word/phrase of the text -->
@@ -84,15 +84,19 @@
 
 
     <!-- Adding work experience section -->
-
     <section id="WorkExperience">
-        <div class="container text-center text-md-start text-light py-3 mt-3 mt-4" style="color:#2c1a4dff">
+        <div class="container text-center text-md-start text-light pt-3 my-3 mt-4" style="color:#2c1a4dff">
             <h1>Work Experience</h1>
+        </div>
+        <div class="container text-center text-md-start pb-1">
+          <p class="text-muted">
+            For a detailed view, you can check out my resume <a href="HB-Resume.pdf" download="HB-Resume.pdf">here</a>
+          </p>
         </div>
 
         <div class="d-flex flex-row container">
             <div class="col-md-3 align-items-stretch d-none d-lg-flex">
-              <img class = "image-fluid img-thumbnail float-start d-none d-lg-block", src="images/coder.svg" alt="GabarAvatar">
+              <img class = "image-fluid img-thumbnail float-start d-none d-lg-block border-0", src="images/workex.svg" alt="GabarAvatar" style="background-color: #160d27ff">
             </div>
 
             <div class="col-md-9 flex-grow-1">
@@ -174,7 +178,7 @@
 
                                     <div class="bg-white">
                                       <div class="h6 text-dark py-1">
-                                        I assisted VP of revenue management (and COO) with analyses aiming towards supporting revenue enhancement initiatives along with other ad-hoc causal analyses.
+                                        I assisted the VP of revenue management (and COO) with analyses aiming towards supporting revenue enhancement initiatives along with other ad-hoc causal analyses.
                                       </div>
                                       <div class="h6 text-dark">
                                         <span class="h6 fw-bold">Tech Stack:</span> MS-Excel & VBA, Python
@@ -217,11 +221,7 @@
           </div>
         </div>
 
-        <div class="container text-center text-md-start pt-5">
-          <p class="text-muted h6">
-            For a detailed view, you can check out my resume <a href="HB-Resume.pdf" download="HB-Resume.pdf">here</a>
-          </p>
-        </div>
+
     </section>
 
 
