fix image file name

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <div class="d-flex flex-row container">
             <div class="col-md-3 align-items-stretch d-none d-lg-flex">
-              <img class = "image-fluid img-thumbnail float-start d-none d-lg-block border-0", src="images/workex.svg" alt="GabarAvatar" style="background-color: #160d27ff">
+              <img class = "image-fluid img-thumbnail float-start d-none d-lg-block border-0", src="images/WorkEx.svg" alt="GabarAvatar" style="background-color: #160d27ff">
             </div>
 
             <div class="col-md-9 flex-grow-1">
