contact page formatting changes

--- a/index.html
+++ b/index.html
@@ -280,34 +280,34 @@
         </div>
         <div class="col-md-6">
 
-          <div class="text-center text-md-start text-light mt-5">
-            <div class="d-flex flex-row text-center text-md-start text-light mx-5 px-5 py-4">
-              <div class="col-md-4 text-center text-md-start text-light">
+          <div class="text-center text-sm-start text-light mt-5">
+            <div class="d-flex flex-row text-center text-sm-start text-light mx-5 px-5 py-4">
+              <div class="col-md-4 text-center text-sm-start text-light">
                 <h3>Email</h3>
               </div>
-              <div class="col-md-8 text-center text-md-start text-light px-2">
+              <div class="col-md-8 text-center text-sm-start text-light px-2">
                 <a class="h4" href= "mailto: baberwalharsh@outlook.com" target="_blank"> baberwalharsh@outlook.com </a>
               </div>            
             </div>
           </div>
 
-          <div class="text-center text-md-start text-light mt-5">
-            <div class="d-flex flex-row text-center text-md-start text-light mx-5 px-5 py-4">
-              <div class="col-md-4 text-center text-md-start text-light">
+          <div class="text-center text-sm-start text-light mt-5">
+            <div class="d-flex flex-row text-center text-sm-start text-light mx-5 px-5 py-4">
+              <div class="col-md-4 text-center text-sm-start text-light">
                 <h3>LinkedIn</h3>
               </div>
-              <div class="col-md-8 text-center text-md-start text-light px-2">
+              <div class="col-md-8 text-center text-sm-start text-light px-2">
                 <a class="h4" href= "https://www.linkedin.com/in/baberwalharsh/" target="_blank"> linkedin.com/in/baberwalharsh </a>
               </div>            
             </div>
           </div>
 
-          <div class="text-center text-md-start text-light mt-5">
-            <div class="d-flex flex-row text-center text-md-start text-light mx-5 px-5 pt-4">
-              <div class="col-md-4 text-center text-md-start text-light">
+          <div class="text-center text-sm-start text-light mt-5">
+            <div class="d-flex flex-row text-center text-sm-start text-light mx-5 px-5 pt-4">
+              <div class="col-md-4 text-center text-sm-start text-light">
                 <h3>GitHub</h3>
               </div>
-              <div class="col-md-8 text-center text-md-start text-light px-2">
+              <div class="col-md-8 text-center text-sm-start text-light px-2">
                 <a class="h4" href= "https://github.com/harshbaberwal21/" target="_blank"> github.com/harshbaberwal21 </a>
               </div>            
             </div>
