udpate home page text a little

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
             </p>
 
             <p class="lead" style="text-align: justify">
-              <strong class="h4">PS: </strong>I'm open to work. Check out my resume <a href="HB-Resume.pdf" download="HB-Resume.pdf">here</a>.
+              <strong class="h4">PS: </strong>I'm open to work. Check out my resume <a href="HB-Resume.pdf" download="HB-Resume.pdf">here</a>. <br>
+              <br>
+              Also, thank you for bearing the site. I'm in no way a front-end developer.
             </p>
           </div>
 
